# Student-result-db

./: pyproject.toml
src/: main.py
src/core/: __init__.py  auth.py  models.py
src/core/static/css/: styles.css
src/core/templates/base/: base.html  base_login.html  base_register.html  base_student.html  newbase.html
src/core/templates/fegrade/: s1.html  s2.html  s3.html  s5.html  s6.html  s7.html  s8.html
src/core/templates/fgrade/: s1.html  s2.html  s3.html  s4.html  s5.html  s6.html  s7.html  s8.html
src/core/templates/filterbygrade/: s1.html  s2.html  s3.html  s4.html  s5.html  s6.html  s7.html  s8.html  test.html
src/core/templates/home/: about.html  contact.html  home.html  teacher_filter_by.html
src/core/templates/student/: loginstudent.html  student_view.html
src/core/templates/teacher/: teacher_add_subject.html  teacher_filter_by.html  teacher_home.html  teacher_login.html  teacher_register.html  teacher_upload.html  teacher_view_grade.html
src/core/views/: home.py  student.py  teacher.py
